--- a/john.html
+++ b/john.html
@@ -257,8 +257,12 @@
                     First in Course | ENGGEN 115: Principles of Engineering Design <br />
                     First in Course | ELECTENG 101: Electrical and Digital Systems <br />
                     First in Course | CHEMMAT 121: Materials Science <br />
-                    First in CAD Design for ENGGEN 115 – Captain Pi’s Soarin’ Roger <a href="#">(see
-                        project)</a><br />
+                    First in CAD Design – Captain Pi’s Soarin’ Roger <a href="#" data-toggle="modal"
+                        data-target="#imgModal" class="img-item" title="/john/assets/soarin_roger.png">(see
+                        project)</a> <a
+                        href="https://drive.google.com/drive/folders/1r1PgPIpR94aySjnmo8odFT_iuRnsknuH?usp=sharing"
+                        target="_blank">(see
+                        full)</a><br />
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
@@ -279,7 +283,8 @@
                     <div><em><b>International Young Physicists Tournament</b></em></div>
                     Captain of School Team | 4th Regionals, 6th Nationals<br />
                     Member of National Team | Awarded Silver | @ Warsaw, Poland <a
-                        href="https://www.youtube.com/watch?v=KYo6XEa1LU8&list=PL4qPZTW1_IOejFItGfFivv1OWlh-4Z2WB" target="_blank">(see
+                        href="https://www.youtube.com/watch?v=KYo6XEa1LU8&list=PL4qPZTW1_IOejFItGfFivv1OWlh-4Z2WB"
+                        target="_blank">(see
                         presentations)</a><br />
                 </li>
                 <li>
@@ -325,7 +330,9 @@
                         that bring industry and secondary schools together to one place at one time to foster
                         connection between the
                         technological leaders of today and tomorrow.
-                        Following the success of their events such as <a href="https://www.youtube.com/watch?v=iy3VW4L0dAY" target="_blank">‘YTech: Walking on Mars’</a> and
+                        Following the success of their events such as <a
+                            href="https://www.youtube.com/watch?v=iy3VW4L0dAY" target="_blank">‘YTech: Walking on
+                            Mars’</a> and
                         ‘AI: The World of Tomorrow’,
                         YTech NZ continues to provide insight into STEM pathways and hopes to expand nationwide in
                         the future —
@@ -533,6 +540,17 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="imgModal">
+        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img id="imgModalLink" src="/assets/img/profile_john.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div style="font-size: 10px;">
         <div><b>Icons were sourced from:</b></div>
         <a target="_blank" href="https://icons8.com/icon/7AFcZ2zirX6Y/dart">Dart icon by Icons8</a>
