--- a/template.html
+++ b/template.html
@@ -1,5 +1,29 @@
 <!-- Templates for addons to be used on personal profiles -->
 
+<!-- Image Modal -->
+<div class="modal fade" id="imgModal">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img id="imgModalLink" src="/assets/img/profile_john.jpg" alt="">
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Video Modal -->
+<div class="modal fade" id="vidModal">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-content" style="height: 500px;">
+            <div class="modal-body" id="yt-player">
+                <iframe id="vidModalLink" width="100%" height="100%"
+                    src="https://www.youtube.com/embed/jxMq36286YM?rel=0&autoplay=1&mute=1" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- Skills Sections Dots -->
 
