fixed a few bugs

--- a/john.html
+++ b/john.html
@@ -103,7 +103,9 @@
                         <div class="subheading mb-3">National Certificate of Educational Achievement
                         </div>
                         <div>Clubs & Societies | Concert Band, Drumline, Badminton, Table Tennis, Spoken Word, <a
-                                class="js-scroll-trigger" href="#fruition">Animation</a></div>
+                                title="https://www.youtube.com/embed/seEOX0T1l30?rel=0&autoplay=1&mute=1"
+                                class="project-item" data-toggle="modal" data-target="#vidModal" href="#">Animation</a>
+                        </div>
                         <p>Excellence Endorsed at levels 1, 2, 3</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Feb 2015 - Dec 2019</span></div>
