added github link to serena profile

--- a/serena.html
+++ b/serena.html
@@ -61,7 +61,7 @@
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/serenalau272"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/serena.lau.351/"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
