updated personal info

--- a/serena.html
+++ b/serena.html
@@ -93,12 +93,15 @@
                             <p>Engaged with a diverse age/experience range of students and prepared weekly teaching materials catered to each student, including the design of suitable teaching methods tailored to students with special needs. Managed student caregiver relationships and liaised with colleagues for administrative purposes.
                                 </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2020 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2020 - June 2021</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Freelance Piano Teacher</h3>
+                            <div class="subheading mb-3"></div>
+                            <p>Private teaching of piano students ranging from beginner to diploma levels.
+                            </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2020 - Present</span></div>
                     </div>
@@ -151,9 +154,9 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">An app</h3>
+                            <h3 class="mb-0">Investment-Info Program</h3>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2021</span></div>
                     </div>
                 </div>
             </section>
