added linkedin link

--- a/serena.html
+++ b/serena.html
@@ -60,7 +60,7 @@
                     <p class="lead mb-5">I'm a curious and enthusiastic software engineering undergraduate student from The University of Auckland with a keen passion for innovative solutions in the technological engineering context. I love new challenges that push me to grow, learn more and expand my skill set and experience.   
                     </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/serena-lau-2166111a0/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/serenalau272"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/serena.lau.351/"><i class="fab fa-facebook-f"></i></a>
                     </div>
