updated personal projects

--- a/serena.html
+++ b/serena.html
@@ -144,19 +144,21 @@
                     <h2 class="mb-5">Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">SEEVEE</h3>
-                            <div class="subheading mb-3">A portfolio project thing</div>
-                            <p>Made some cool portfolios and seevees
-                                </p>
+                            <h3 class="mb-0">Investment-Info Program</h3>
+                            <p>Basic stock investment analysis and information output.</p>
+                            <p><a href="https://github.com/serenalau272/Investment-Info">[GitHub Link]</a></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2021</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Investment-Info Program</h3>
+                            <h3 class="mb-0">PCBC Library Webpage</h3>
+                            <div class="subheading mb-3">Lead Developer</div>
+                            <p>I'm in the early stages of full stack development of a new webpage for my church library that can fulfil all the requirements (for the administrators, librarians and borrowers) needed for the system. </p>
+                            <p><a href="https://github.com/serenalau272/PCBC-Library-Webpage">[GitHub Link]</a></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">January 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2021 - Present</span></div>
                     </div>
                 </div>
             </section>
