--- a/serena.html
+++ b/serena.html
@@ -120,6 +120,7 @@
                             <div>Majoring in Software Engineering 
                             </div>
                             <p> Offered University of Auckland Top Achiever Scholarship </p>
+                            <p>Clubs and Societies: Student Life, Software Engineering Student Association</p>
                             <p>GPA: 8.9</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2020 - Present</span></div>
