Updated phone number and description

--- a/nick.html
+++ b/nick.html
@@ -61,13 +61,11 @@
                     <span class="text-primary">Huang</span>
                 </h1>
                 <div class="subheading mb-5">
-                    Software Engineer BE(Hons) · <a href="tel:+6402102878432">(021) 02878432</a> ·
+                    Software Engineer BE(Hons) · <a href="tel:+6402102878432">(+64) 02102878432</a> ·
                     <a href="mailto:thenickys123@gmail.com">thenickys123@gmail.com</a>
                 </div>
 
-                <p class="lead mb-5">An aspiring software developer with a passion for how technology can be used for
-                    the betterment of societal and business outcomes. An avid learner, excited by the potential that the
-                    technology of tomorrow holds.</p>
+                <p class="lead mb-5">I am a highly motivated and hardworking person, who recently stuyding second year Software Engineering in the University of Auckland. I’m an individual who can perform well under pressure and work well when working with teams’ members. I am currently seeking an opportunity to enhance my experience and skills in a new environment.</p>
 
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/nick-huang-bacon/" target="_blank"><i
