Added hover colour

--- a/nick.html
+++ b/nick.html
@@ -168,7 +168,7 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
-                    <div><em><b>Part 1 Engineering</b></em></div>
+                    <div><em><b>Part 1 Engineering (1st year)</b></em></div>
                     Deans Honour List (top 5% of cohort) <br />
                     First in Course | ENGSCI 111: Mathematical Modelling 1 <br />
                     First in Course | ENGGEN 131: Introduction to Engineering Computation and Software Development <br />
