--- a/john.html
+++ b/john.html
@@ -150,9 +150,9 @@
                     <a data-toggle="modal" data-target="#vidModal">
                         <div class="project-scaffold">
                             <div class="imagebox">
-                                <img class="project-image" src="john/assets/chance_profile.png">
+                                <img class="project-image" style="float: right;" src="john/assets/chance_profile.png">
                             </div>
-                            <div class="project-descript">
+                            <div class="project-descript" style="float: left;">
                                 <h3 class="mb-0">Chance: An App of Oddities</h3>
                                 <hr style="margin: 5px;" />
                                 <b>Chance - An App Of Oddities is the first flutter app I've managed to create!</b><br>
@@ -162,6 +162,30 @@
                                 :)
                                 <br /><br />
                                 <div class="flex-shrink-0"><span class="date">Jan 2021 - Feb 2021</span></div>
+                            </div>
+
+                        </div>
+                    </a>
+                </div>
+                
+                <div class="project-item">
+                    <a href="https://github.com/Git-Gud-Gang/Noodle.com" target="_blank">
+                        <div class="project-scaffold">
+                            <div class="imagebox">
+                                <img class="project-image" style="float: left;" src="john/assets/noodle_profile.png">
+                            </div>
+                            <div class="project-descript" style="float: right;">
+                                <h3 class="mb-0">Noodle.com</h3>
+                                <hr style="margin: 5px;" />
+                                Created by our team during the WDCC x SESA Hackathon. The theme was "facilitating procrastination".<br/>
+                                Whenever the user tries to use a productivity related website such as Wikipedia, they are redirected 
+                                by a Chrome extension to Noodle.com. Noodle.com is a search engine where all the search results are 
+                                useless things such as gifs, puns, and videos. Users are able to submit their own content to be added
+                                into our database as future search results.
+                                
+                                <br> <br>Click here to see the Github repository for the project.
+                                <br /><br />
+                                <div class="flex-shrink-0"><span class="date">Jul 2021 - Aug 2021</span></div>
                             </div>
 
                         </div>
