Update nick.html, forgot to add bash

--- a/nick.html
+++ b/nick.html
@@ -125,7 +125,7 @@
                                 <h3 class="mb-0">C++ game programming</h3>
                                 <hr style="margin: 5px;" />
                                 Using C++ and SFML to create some simple single player PC games like "Timber", "Pong" and "Zombie Arena".
-                                <br> <br>Click to checkout the games on github
+                                <br> <br>Click here to see the Github repository for the project.
                                 <br /><br />
                                 <div class="flex-shrink-0"><span class="date">Nov 2020 - PRESENT</span></div>
                             </div>
@@ -143,12 +143,15 @@
                             <div class="project-descript" style="float: left;">
                                 <h3 class="mb-0">Noodle.com</h3>
                                 <hr style="margin: 5px;" />
-                                <b>Noodle.com</b>
-                                is a web framework that prevents you from studying and procrastinate as much as possible.<br>
-                                My team and I made this web page during the hackathon (WDCC x SESA Hackathon).
-                                <br> <br>Click to checkout the code on github
+                                Created by our team during the WDCC x SESA Hackathon. The theme was "facilitating procrastination".
+                                Whenever the user tries to use a productivity related website such as Wikipedia, they are redirected 
+                                by a Chrome extension to Noodle.com. Noodle.com is a search engine where all the search results are 
+                                useless things such as gifs, puns, and videos. Users are able to submit their own content to be added
+                                into our database as future search results.
+
+                                <br> <br>Click here to see the Github repository for the project.
                                 <br /><br />
-                                <div class="flex-shrink-0"><span class="date">Jul 2021</span></div>
+                                <div class="flex-shrink-0"><span class="date">Jul 2021 - Aug 2021</span></div>
                             </div>
 
                         </div>
@@ -220,6 +223,7 @@
                         <li>Java</li>
                         <li>HTML & CSS</li>
                         <li>Javascript</li>
+                        <li>Bash</li>
                         <li>C</li>
                         <li>MATLAB & R</li>
                         <li>Unity</li>
@@ -227,6 +231,7 @@
                 </span>
                 <div class="dots">
                     <ul class="list-unstyled">
+                        <!-- Python -->
                         <li>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
@@ -234,6 +239,23 @@
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                         </li>
+                        <!-- C++ -->
+                        <li>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                        </li>
+                        <!-- Java -->
+                        <li>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                        </li>
+                        <!-- HTML & CSS -->
                         <li>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
@@ -241,6 +263,7 @@
                             <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                         </li>
+                        <!-- Javascript -->
                         <li>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
@@ -248,6 +271,7 @@
                             <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                         </li>
+                        <!-- Bash -->
                         <li>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
@@ -255,6 +279,7 @@
                             <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                         </li>
+                        <!-- C -->
                         <li>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
@@ -262,6 +287,7 @@
                             <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                         </li>
+                        <!-- MATLAB & R -->
                         <li>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
@@ -269,13 +295,7 @@
                             <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                         </li>
-                        <li>
-                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
-                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
-                            <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
-                            <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
-                            <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
-                        </li>
+                        <!-- Unity -->
                         <li>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
@@ -301,6 +321,8 @@
                 <li class="list-inline-item skills-icons"><img
                         src="https://img.icons8.com/color/48/000000/javascript.png" /></li>
                 <li class="list-inline-item skills-icons"><img
+                        src="https://img.icons8.com/plasticine/100/000000/bash.png"/></li>
+                <li class="list-inline-item skills-icons"><img
                         src="https://img.icons8.com/color/48/000000/c-programming.png" /></li>
                 <li class="list-inline-item skills-icons"><img
                         src="https://img.icons8.com/fluent/48/000000/matlab.png" /></li>
@@ -325,13 +347,6 @@
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
-                            <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
-                            <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
-                        </li>
-                        <li>
-                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
-                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
-                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                         </li>
@@ -339,7 +354,14 @@
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
-                            <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                        </li>
+                        <li>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                            <span class="circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
                             <span class="circle"><i class="far fa-circle" aria-hidden="true"></i></span>
                         </li>
                     </ul>
@@ -390,6 +412,7 @@
         <a target="_blank" href="https://icons8.com/icon/20909/html-5">HTML 5 icon by Icons8</a>
         <a target="_blank" href="https://icons8.com/icon/21278/css3">CSS3 icon by Icons8</a>
         <a target="_blank" href="https://icons8.com/icon/108784/javascript">JavaScript icon by Icons8</a>
+        <a target="_blank" href="https://icons8.com/icon/50ZQHdJTmPqw/bash">Bash icon by Icons8</a>
         <a target="_blank" href="https://icons8.com/icon/40670/c-programming">C Programming icon by Icons8</a>
         <a target="_blank" href="https://icons8.com/icon/r5Y16PcDkoWI/matlab">MATLAB icon by Icons8</a>
         <a target="_blank" href="https://icons8.com/icon/xJd_7yBGvl5J/r-project">R Project icon by Icons8</a>
