--- a/nicholas.html
+++ b/nicholas.html
@@ -159,6 +159,25 @@
                     </a>
                 </div>
 
+                <div class="project-item">
+                    <a href="https://github.com/johnchen383/BibleWebScraper" target="_blank">
+                        <div class="project-scaffold">                            
+                            <div class="project-descript" style="float: left;">
+                                <h3 class="mb-0">Bible Webscraper</h3>
+                                <hr style="margin: 5px;" />
+                                A webscraper for biblegateway.com written in Python. It creates a PDF file of a given 
+                                passage specified by the user. The PDF file only contains the original text of the 
+                                manuscript - other text such as footnotes and verse numbers are removed.
+                                
+                                <br> <br>Click here to see the Github repository for the project.
+                                <br /><br />
+                                <div class="flex-shrink-0"><span class="date">Jul/Aug 2021</span></div>
+                            </div>
+
+                        </div>
+                    </a>
+                </div>
+
                 
 
 
