changed date in projects

--- a/nicholas.html
+++ b/nicholas.html
@@ -171,7 +171,7 @@
                                 
                                 <br> <br>Click here to see the Github repository for the project.
                                 <br /><br />
-                                <div class="flex-shrink-0"><span class="date">Jul/Aug 2021</span></div>
+                                <div class="flex-shrink-0"><span class="date">Sep 2021</span></div>
                             </div>
 
                         </div>
