Serena: further profile updates and styling changes

--- a/serena.html
+++ b/serena.html
@@ -6,14 +6,14 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Portfolio | Serena Lau</title>
-        <link rel="icon" type="image/x-icon" href="/assets/img/profile_serena.jpg" />
+        <link rel="icon" type="image/x-icon" href="serena/assets/serena.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="serena/serena.css" rel="stylesheet" />
         <link href="css/custom.css" rel="stylesheet"/>
         <link href="css/icon.css" rel="stylesheet" />
 
@@ -157,32 +157,117 @@
             </section>
             <hr class="m-0" />
 
-             <!-- Projects -->
-             <section class="resume-section" id="projects">
+            <!-- Projects-->
+            <section class="resume-section" id="projects">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Projects</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Investment-Info Program</h3>
-                            <p>Basic stock investment analysis and information output.</p>
-                            <p><a href="https://github.com/serenalau272/Investment-Info">[GitHub Link]</a></p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">January 2021</span></div>
+                    <h2 class="mb-5">Featured Projects</h2>
+                    <div class="project-item">
+                        <a href="https://github.com/UoaWDCC/UADS_Backend" target="_blank">
+                            <div class="project-scaffold">
+                                <div class="imagebox">
+                                    <img class="project-image" style="float: left;" src="serena/assets/uads.png">
+                                </div>
+                                <div class="project-descript" style="float: right;">
+                                    <h3 class="mb-0">Web Development Consulting Club - UADS Project</h3>
+                                    <hr style="margin: 5px;" />
+                                    Worked closely with the University of Auckland Dessert Society (UADS) and a team of 6 to develop an app that allows users to register and pay for events.
+                                    <br> 
+                                    <br>
+                                    <ul>
+                                        <li>Designed REST API using APICURIO studio for user operations and created in Node.js</li>
+                                        <li>Developed a functional user settings UI using React Native.</li>
+                                    </ul>
+                                    Click here to see the Github repository for the project.
+                                    <br>
+                                    <i class="stack-icon fas fa-solid fa-layer-group"></i>
+                                    <b>MongoDB, Express, React Native, Node and TypeScript</b>
+                                    <br>
+                                    <br>
+                                    <div class="flex-shrink-0"><span class="date">Aug 2021 - Present</span></div>
+                                </div>
+
+                            </div>
+                        </a>
+                    </div>
+                    <div class="project-item">
+                        <a href="https://github.com/serenalau272/Kemu-Kupu" target="_blank">
+                            <div class="project-scaffold">
+                                <div class="imagebox">
+                                    <img class="project-image" style="float: right;" src="serena/assets/kemukupu.png">
+                                </div>
+                                <div class="project-descript" style="float: left;">
+                                    <h3 class="mb-0">Kēmu Kupu</h3>
+                                    <hr style="margin: 5px;" />
+                                    Kēmu Kupu is a multimedia educational GUI application designed to help children between the ages of 8 and 12 with te reo Māori learning. 
+
+                                    <br>This design project won the UoA 2021 SE206 (Software Engineering Design) course competition <b>People's Choice Award</b>.
+                                    <br> 
+                                    <br>
+                                    Click here to see the Github repository for the project.
+                                    <br>
+                                    <i class="stack-icon fas fa-solid fa-layer-group"></i>
+                                    <b>Java / JavaFX, Rust</b>
+                                    <br>
+                                    <br>
+                                    <div class="flex-shrink-0"><span class="date">Sept 2021</span></div>
+                                </div>
+
+                            </div>
+                        </a>
                     </div>
 
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">PCBC Library Webpage</h3>
-                            <div class="subheading mb-3">Lead Developer</div>
-                            <p>I'm in the early stages of full stack development of a new webpage for my church library that can fulfil all the requirements (for the administrators, librarians and borrowers) needed for the system. </p>
-                            <p><a href="https://github.com/serenalau272/PCBC-Library-Webpage">[GitHub Link]</a></p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2021 - Present</span></div>
+                    <div class="project-item">
+                        <a href="https://github.com/Git-Gud-Gang/Noodle.com" target="_blank">
+                            <div class="project-scaffold">
+                                <div class="imagebox">
+                                    <img class="project-image" style="float: left;" src="serena/assets/noodle_profile.png">
+                                </div>
+                                <div class="project-descript" style="float: right;">
+                                    <h3 class="mb-0">Noodle</h3>
+                                    <hr style="margin: 5px;" />
+                                    A search engine for jokes, facts, and other media created by our team of 6 during the WDCC x SESA 2021 Hackathon, where the theme was 'facilitating procrastiation'. It is linked with a Chrome extension that redirects users from a productivity related website e.g. Wikipedia to Noodle. 
+                                    <br>Users are able to view others' and submit their own content to our database as future search results, which also increases the health bar of the home page cat.
+                                    <br>
+                                    <br>
+                                    Click here to see the Github repository for the project.
+                                    <br>
+                                    <i class="stack-icon fas fa-solid fa-layer-group"></i>
+                                    <b>MongoDB, Express, React, Node and JavaScript</b>
+                                    <br>
+                                    <br>
+                                    <div class="flex-shrink-0"><span class="date">Aug 2021</span></div>
+                                </div>
+
+                            </div>
+                        </a>
                     </div>
+
+                    <div id="fruition" class="project-item"
+                        title="https://www.youtube.com/embed/seEOX0T1l30?rel=0&autoplay=1&mute=1">
+                        <a href="https://github.com/serenalau272/Investment-Info" target="_blank">
+                            <div class="project-scaffold">
+                                <div class="project-descript" style="width: 100%">
+                                    <h3 class="mb-0">Investment-Info Program</h3>
+                                    <hr style="margin: 5px;" />
+                                    Basic stock investment analysis and information output - combines investment calculations (e.g. transaction/exchange fees) I previously spent a long time doing manually into an adaptable program that can be continuously updated with new stocks and transactions.
+                                    <br>
+                                    <br>
+                                    Click here to see the Github repository for the project.
+                                    <br>
+                                    <i class="stack-icon fas fa-solid fa-layer-group"></i>
+                                    <b>Java</b>
+                                    <div class="flex-shrink-0"><span class="date">Jan 2021</span></div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+
                 </div>
+            </div>
             </section>
             <hr class="m-0" />
-
+    
              <!-- Achievements-->
              <section class="resume-section" id="achievements">
                 <div class="resume-section-content">
@@ -199,7 +284,7 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
                             <b>ACG Parnell College Academic Excellence Awards</b>
-                            <br>First overall in year level (2016 – 2018)
+                            <br>First overall in year level (2016 - 2018)
                             <br>Second overall in year level (2019)
                         </li>
                         </p>
